--- a/html5up-forty/assets/css/solution.css
+++ b/html5up-forty/assets/css/solution.css
@@ -285,7 +285,7 @@ body{
 
     .video-sol
     {
-        margin-left: 15%;
+        margin-left: -15%;
     }
 
     /* HR STYLE  */
@@ -294,4 +294,28 @@ body{
         border: 0;
         height: 1px;
         background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    }
+
+    .btn-sol{
+        height: 32px;
+        border-radius: 16px;
+        position: relative;
+        top: 5rem;
+
+    }
+
+    .solution-text{
+        text-align: center;
+        margin-top: 3%;
+    }
+
+    .btn-group1{
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .btn-group2{
+        display: flex;
+        justify-content: center;
+        margin-top: 6%;
     }
