--- a/html5up-forty/assets/css/solution.css
+++ b/html5up-forty/assets/css/solution.css
@@ -177,7 +177,6 @@ body{
 
         #banner-sol {
             padding: 5em 0 1em 0 ;
-            height: auto;
             margin-bottom: -2.75em;
             max-height: none;
             min-height: 0;
@@ -299,7 +298,7 @@ body{
 
     .video-sol
     {
-        /* margin-left: -15%; */
+        margin-left: -7%;
         order: 4;
     }
 
@@ -502,19 +501,38 @@ body{
     .video-sol2{
         display:block
     }
+
+    #banner-sol{
+        height: 108vh;
+        max-height: 45em;
+    }
+
+
 }
 
 @media only screen and (max-width:991px){
     .video-sol{
         order: unset;
+        margin-left: 0%;
         
     }
 
      #banner-sol{
         top: 7rem;
         height: 105rem;
+        max-height: 58em;
+        margin: auto;
     } 
 
+    .flex-all-section{
+        margin-top: 12%;
+    }
+
+    .vismargin{
+        margin: inherit;
+    }
+
+    
     /* .flex-section{
         top: 10rem;
     } */
@@ -522,4 +540,10 @@ body{
     /* hr{
         top: 10rem;
     } */
+}
+
+@media screen and (max-width: 736px){
+    #banner-sol{
+        height: 52rem;
+    }
 }
