--- a/html5up-forty/assets/css/solution.css
+++ b/html5up-forty/assets/css/solution.css
@@ -25,7 +25,7 @@ body{
     background-size: cover;
     border-bottom: 0 !important;
     cursor: default;
-    height:90vh;
+    height:95vh;
     margin-bottom: -3.25em;
     max-height: 39em;
     /* min-height: 22em; */
@@ -308,6 +308,7 @@ body{
     {
         margin-left: -7%;
         order: 4;
+        margin-top: 10%;
     }
 
     .video-sol2{
@@ -756,5 +757,16 @@ body{
         right: 2rem;
     }
 }
+
+@media only screen and (min-width:992px) and (max-width:1150px)
+{
+    .toto{
+        position: relative;
+        left: 13rem;
+
+    }
+   
+}
+
 
 
